Closed
Bug 1331009
Opened 4 years ago
Closed 4 years ago
Allow line separator between await and its expression
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox-esr45 | --- | unaffected |
firefox51 | --- | unaffected |
firefox52 | --- | fixed |
firefox-esr52 | --- | unaffected |
firefox53 | --- | fixed |
firefox54 | --- | fixed |
People
(Reporter: anba, Assigned: arai)
References
Details
Attachments
(3 files)
5.79 KB,
patch
|
till
:
review+
|
Details | Diff | Splinter Review |
5.79 KB,
patch
|
arai
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
5.75 KB,
patch
|
arai
:
review+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Test case: --- async function f() { await 0; } --- Expected: Parses successfully Actual: Throws SyntaxError
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → arai.unmht
Status: NEW → ASSIGNED
Assignee | ||
Updated•4 years ago
|
status-firefox51:
--- → unaffected
status-firefox52:
--- → affected
status-firefox54:
--- → affected
status-firefox-esr45:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Assignee | ||
Comment 1•4 years ago
|
||
Removed wrong same-line check after TOK_AWAIT.
Attachment #8834915 -
Flags: review?(till)
Comment 2•4 years ago
|
||
Comment on attachment 8834915 [details] [diff] [review] Remove wrong restriction for a newline after await. Review of attachment 8834915 [details] [diff] [review]: ----------------------------------------------------------------- r=me, thanks
Attachment #8834915 -
Flags: review?(till) → review+
Assignee | ||
Comment 3•4 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a16d5d08b268652f05f54fde71dc83fb60abf641 Bug 1331009 - Remove wrong restriction for a newline after await. r=till
Comment 4•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a16d5d08b268
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Assignee | ||
Comment 5•4 years ago
|
||
Approval Request Comment > [Feature/Bug causing the regression] Added by bug 1185106. > [User impact if declined] Throws error for valid JS syntax. > [Is this code covered by automated tests?] yes > [Has the fix been verified in Nightly?] yes > [Needs manual test from QE? If yes, steps to reproduce] no > [List of other uplifts needed for the feature/fix] none > [Is the change risky?] no > [Why is the change risky/not risky?] just removes unnecessary restriction that has no other effect. > [String changes made/needed] none
Attachment #8835671 -
Flags: review+
Attachment #8835671 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 6•4 years ago
|
||
Approval Request Comment > [Feature/Bug causing the regression] Added by bug 1185106. > [User impact if declined] Throws error for valid JS syntax. > [Is this code covered by automated tests?] yes > [Has the fix been verified in Nightly?] yes > [Needs manual test from QE? If yes, steps to reproduce] no > [List of other uplifts needed for the feature/fix] none > [Is the change risky?] no > [Why is the change risky/not risky?] just removes unnecessary restriction that has no other effect. > [String changes made/needed] none
Attachment #8835672 -
Flags: review+
Attachment #8835672 -
Flags: approval-mozilla-beta?
Comment 7•4 years ago
|
||
Comment on attachment 8835671 [details] [diff] [review] (mozilla-aurora) Remove wrong restriction for a newline after await. r=till don't reject valid js syntax, aurora53+
Attachment #8835671 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•4 years ago
|
||
Comment on attachment 8835672 [details] [diff] [review] (mozilla-beta) Remove wrong restriction for a newline after await. r=till don't reject valid js syntax, beta52+
Attachment #8835672 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/bbe0f9d9bf9d
Flags: in-testsuite+
Comment 10•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/65be24609b44
Comment 11•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-esr52/rev/65be24609b44
You need to log in
before you can comment on or make changes to this bug.
Description
•