Bug 1331009 - Remove wrong restriction for a newline after await. r=till, a=jcristau