js/src/tests/ecma_2017/AsyncFunctions/syntax.js
@@ -33,9 +33,6 @@ if (typeof Reflect !== "undefined" && Reflect.parse) {
     assertThrows(() => Reflect.parse("function* a() { await 4; }"), SyntaxError);
     assertThrows(() => Reflect.parse("async function k() { function a() { await 4; } }"), SyntaxError);
 
-    // No line terminator after await is allowed
-    assertThrows(() => Reflect.parse("async function a() { await\n4; }"), SyntaxError);
-
     // Await is not allowed as a default expr.
     assertThrows(() => Reflect.parse("async function a(k = await 3) {}"), SyntaxError);
     assertThrows(() => Reflect.parse("async function a() { async function b(k = await 3) {} }"), SyntaxError);
